fix(comments): add comments where necessary

--- a/scripts/forecast_test_2.ipynb
+++ b/scripts/forecast_test_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f27be163-906e-467c-a0b1-3934227a7b31",
    "metadata": {
     "scrolled": true
@@ -196,6 +196,12 @@
     "import matplotlib.pyplot as plt\n",
     "import psycopg2\n",
     "import os\n",
+    "\n",
+    "#initial=\"365 days\" → The first 1 year of data was used to train the model before testing starts.\n",
+    "\n",
+    "#period=\"30 days\" → After each training/test split, the window moves forward by 30 days and repeats.\n",
+    "\n",
+    "#horizon=\"90 days\" → Each test forecasts 90 days into the future, which is compared against actuals.\n",
     "\n",
     "# --- Connect to DB ---\n",
     "conn = psycopg2.connect(\n",
